    - Fix #969: crash when switching language after using Ack (ZENOG)
    - Remove unnecessary Wx::gettext calls from Padre::Wx::Dialog::Preferences
      that lead to missing translations (ZENOG)
    - Description field is hidden by default in the regex editor dialog.
      A checkbox now optionally toggles its visibility (AZAWAWI)

0.66 2010.07.01
    - Improved the quality and integration of the default window size (ADAMK)
    - The non-blocking IO upgrade in 0.65 meant that Padre could no longer
      open files on Windows. Fixed (ADAMK)
    - Minor improvements to the About dialog (ADAMK)

0.65 2010.07.01
    - Task 2.0 API landed on trunk (and everything breaks) (ADAMK)
    - Converted the FunctionList GUI component to work via a task (ADAMK)
    - Padre::Role::Task role added to allow any object in Padre
      to be the "owner" of task and automatically handle which
      tasks are still relevant to the UI state at the time the task
      is completed, and ignore the ones that aren't (ADAMK)
    - New compulsory Padre::Wx::Role::View for editor GUI componants
      that want to live in the left/right/bottom tool panels (ADAMK)
    - Renamed a number of classes to simpler names. Because we are
      breaking everything anyway, this is an opportune time to lump
      in these low-importance changes (ADAMK)
    - Padre::DocBrowser --> Padre::Browser (ADAMK)
    - Padre::Wx::DocBrowser --> Padre::Wx::Browser (ADAMK)
    - Padre::Wx::Role::MainChild --> Padre::Wx::Role::Main (ADAMK)
    - Language-specific task sub-classes now live under the document class
      instead of under the Padre::Task tree, to encourage concentration
      of language-specific code within the document tree (ADAMK)
    - Padre::Task::Perl::Syntax --> Padre::Document::Perl::Syntax (ADAMK)
    - Padre::Task::Perl::Outline --> Padre::Document::Perl::Outline (ADAMK)
    - Startup config file now uses a custom hyper-minimalist format