@@ -49,6 +49,7 @@ NOTE: Do not "tidy" or change the indenting here, or we break svn annotate
       that lead to missing translations (ZENOG)
     - Description field is hidden by default in the regex editor dialog.
       A checkbox now optionally toggles its visibility (AZAWAWI)
+    - Get rid of global variable in Padre::Wx::FindResult (ZENOG)
 
 0.66 2010.07.01
     - Improved the quality and integration of the default window size (ADAMK)
